--- a/Imageread1.ipynb
+++ b/Imageread1.ipynb
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "9d652c8e-bf0e-47f1-9c92-21e89795987d",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "d6250f10-3887-4b03-a297-04552e3740f4",
    "metadata": {},
    "outputs": [],
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b279ead9-a83f-408d-aaad-e9263f00d473",
    "metadata": {},
    "outputs": [],
@@ -1877,11 +1877,568 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "74eab09a-9643-4b2c-b616-f32d1279b31f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "img = cv2.imread(\"project_image/Leaf.png\")\n",
+    "img = cv2.resize(img, (700,400))\n",
+    "img1 = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "r,thr = cv2.threshold(img1,190,255, cv2.THRESH_BINARY)\n",
+    "c,h = cv2.findContours(thr,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "new_img = cv2.drawContours(img,c,-1,(255,0,0),2)\n",
+    "\n",
+    "cv2.imshow(\"new\",new_img)\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b08280cc-3df7-455e-936b-33056651b41b",
+   "metadata": {},
+   "source": [
+    "Contour Moments\n",
+    "and Convex Hull\n",
+    "using OpenCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9013005e-252b-4d79-a6a4-c8ef0ba4e82c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/Leaf.png\")\n",
+    "gry = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "_,thr = cv2.threshold(gry,220,255, cv2.THRESH_BINARY)\n",
+    "cnt,hir = cv2.findContours(thr,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "img = cv2.drawContours(img,cnt,-1,(0,255,0),4)\n",
+    "\n",
+    "cv2.imshow(\"thre\",thr)\n",
+    "cv2.imshow(\"org\",img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ba6ebcf8-6ca2-4f51-8e01-c7e71cd734a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 't' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     15\u001b[39m a=cv2.contourArea(c)\n\u001b[32m     16\u001b[39m ar.append(a)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m ep=\u001b[32m0.1\u001b[39m*cv2.arcLength(\u001b[43mt\u001b[49m,\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     18\u001b[39m d=cv2.approxPolyDP(c,ep,\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     19\u001b[39m h=cv2.convexHull(d)\n",
+      "\u001b[31mNameError\u001b[39m: name 't' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread(\"project_image/R.png\")\n",
+    "gry = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "_,thr = cv2.threshold(gry,220,255, cv2.THRESH_BINARY)\n",
+    "cnt,hir = cv2.findContours(thr,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "ar=[]\n",
+    "for c in cnt:\n",
+    "    m = cv2.moments(c)\n",
+    "    if m[\"m00\"] != 0:\n",
+    "        x = int(m[\"m10\"] / m[\"m00\"])\n",
+    "        y = int(m[\"m01\"] / m[\"m00\"])\n",
+    "        cv2.drawContours(img,cnt,-1,(0,0,255),4)\n",
+    "        cv2.circle(img, (x, y), 5, (255, 0, 0), -1)\n",
+    "        a=cv2.contourArea(c)\n",
+    "        ar.append(a)\n",
+    "        ep=0.1*cv2.arcLength(t,True)\n",
+    "        d=cv2.approxPolyDP(c,ep,True)\n",
+    "        h=cv2.convexHull(d)\n",
+    "        x,y,w,h=cv2.boundingRect(h)\n",
+    "        cv2.rectangle(img,(x,y),())\n",
+    "\n",
+    "print(ar)\n",
+    "cv2.imshow(\"thre\",thr)\n",
+    "cv2.imshow(\"org\",img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc497c34-811c-416e-bfcd-c7602aef3357",
+   "metadata": {},
+   "source": [
+    "object detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95d70159-1522-4fc4-889b-3c6c27b1f9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "cv2.namedWindow(\"Colour\")\n",
+    "\n",
+    "cv2.createTrackbar(\"thr\",\"Colour\",0,255,nothing)\n",
+    "\n",
+    "cv2.createTrackbar(\"lb\",\"Colour\",0,255,nothing)\n",
+    "cv2.createTrackbar(\"lg\",\"Colour\",0,255,nothing)\n",
+    "cv2.createTrackbar(\"lr\",\"Colour\",0,255,nothing)\n",
+    "\n",
+    "cv2.createTrackbar(\"hb\",\"Colour\",255,255,nothing)\n",
+    "cv2.createTrackbar(\"hg\",\"Colour\",255,255,nothing)\n",
+    "cv2.createTrackbar(\"hr\",\"Colour\",255,255,nothing)\n",
+    "\n",
+    "cap=cv2.VideoCapture(0)\n",
+    "while cap.isOpened():\n",
+    "    r,frame=cap.read()\n",
+    "    if r==True:\n",
+    "        thr=cv2.getTrackbarPos(\"thr\",\"Colour\")\n",
+    "\n",
+    "        LB=cv2.getTrackbarPos(\"lb\",\"Colour\")\n",
+    "        LG=cv2.getTrackbarPos(\"lg\",\"Colour\")\n",
+    "        LR=cv2.getTrackbarPos(\"lr\",\"Colour\")\n",
+    "\n",
+    "        HB=cv2.getTrackbarPos(\"hb\",\"Colour\")\n",
+    "        HG=cv2.getTrackbarPos(\"hg\",\"Colour\")\n",
+    "        HR=cv2.getTrackbarPos(\"hr\",\"Colour\")\n",
+    "\n",
+    "        lower=np.array([LB,LG,LR])\n",
+    "        upper=np.array([HB,HG,HR])\n",
+    "        \n",
+    "        frame=cv2.flip(frame,1)\n",
+    "        frame=cv2.resize(frame,(300,300))\n",
+    "        \n",
+    "        hsv=cv2.cvtColor(frame,cv2.COLOR_BGR2HSV)\n",
+    "        m=cv2.inRange(hsv,lower,upper)\n",
+    "        res=cv2.bitwise_and(frame,frame,mask=m)\n",
+    "        fr=cv2.bitwise_not(res)\n",
+    "\n",
+    "\n",
+    "        thi = cv2.threshold(m,thr,255,cv2.THRESH_BINARY)\n",
+    "        cnt, hr = cv2.findContours(m, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "       \n",
+    "        cv2.drawContours(frame, cnt, -1, (255, 0, 0), 2)\n",
+    "        \n",
+    "        cv2.imshow(\"mask\", m)\n",
+    "        cv2.imshow(\"thr\",m)\n",
+    "        cv2.imshow(\"hsv\", res)\n",
+    "        cv2.imshow(\"frame\", frame)\n",
+    "\n",
+    "\n",
+    "        if cv2.waitKey(25) & 0xff ==ord(\"b\"):\n",
+    "            break\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "                   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e73bd04f-f058-41c2-985b-6b53defec803",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Read image\n",
+    "img = cv2.imread(\"project_image/back.png\")\n",
+    "img = cv2.resize(img, (300, 300))\n",
+    "\n",
+    "# Convert to HSV\n",
+    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# Define GREEN range (tweak if needed)\n",
+    "lower_green = np.array([35, 40, 40])\n",
+    "upper_green = np.array([85, 255, 255])\n",
+    "\n",
+    "# Mask for green background\n",
+    "green_mask = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "\n",
+    "# Invert mask → object becomes white\n",
+    "object_mask = cv2.bitwise_not(green_mask)\n",
+    "\n",
+    "# Clean mask\n",
+    "kernel = np.ones((5,5), np.uint8)\n",
+    "object_mask = cv2.morphologyEx(object_mask, cv2.MORPH_OPEN, kernel)\n",
+    "\n",
+    "\n",
+    "# Create white background\n",
+    "white_bg = np.ones_like(img, dtype=np.uint8) * 255\n",
+    "\n",
+    "# Extract object\n",
+    "\n",
+    "object_only = cv2.bitwise_and(img, img, mask=object_mask)\n",
+    "\n",
+    "# Extract white background\n",
+    "background = cv2.bitwise_and(white_bg, white_bg, mask=green_mask)\n",
+    "\n",
+    "# Combine object + white background\n",
+    "final = cv2.add(object_only, background)\n",
+    "\n",
+    "# Show results\n",
+    "cv2.imshow(\"Original\", img)\n",
+    "cv2.imshow(\"Final Output\", final)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ef1337f9-0cdb-4653-8fee-21f348c54455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Read and resize background image\n",
+    "img = cv2.imread(\"project_image/back.png\")\n",
+    "img = cv2.resize(img, (600, 500))\n",
+    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# Read and convert reference image\n",
+    "img1 = cv2.imread(\"project_image/copy.png\")\n",
+    "hsv2 = cv2.cvtColor(img1, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# Calculate histogram of reference image\n",
+    "hist = cv2.calcHist([hsv2], [0, 1], None, [180, 256], [0, 180, 0, 256])\n",
+    "cv2.normalize(hist, hist, 0, 255, cv2.NORM_MINMAX)\n",
+    "\n",
+    "# Back projection\n",
+    "mask = cv2.calcBackProject([hsv], [0, 1], hist, [0, 180, 0, 256], 1)\n",
+    "\n",
+    "# Smoothing\n",
+    "ker = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (5, 5))\n",
+    "mask = cv2.filter2D(mask, -1, ker)\n",
+    "\n",
+    "# Thresholding\n",
+    "_, thr = cv2.threshold(mask, 200, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "# Convert to 3-channel mask\n",
+    "thr = cv2.merge((thr, thr, thr))\n",
+    "\n",
+    "# Apply mask\n",
+    "res = cv2.bitwise_and(img, thr)\n",
+    "\n",
+    "# Display\n",
+    "cv2.imshow(\"Result\", res)\n",
+    "cv2.imshow(\"Original\", img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7fd437d-d9a8-4983-bab9-a5595613e015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Read first frame\n",
+    "ret, frame = cap.read()\n",
+    "if not ret:\n",
+    "    exit()\n",
+    "\n",
+    "# Select ROI (object to track)\n",
+    "x, y, w, h = cv2.selectROI(\"Select Object\", frame, False)\n",
+    "roi = frame[y:y+h, x:x+w]\n",
+    "\n",
+    "# Convert ROI to HSV\n",
+    "hsv_roi = cv2.cvtColor(roi, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# Create mask to ignore low light\n",
+    "mask = cv2.inRange(hsv_roi,\n",
+    "                   np.array((0., 60., 32.)),\n",
+    "                   np.array((180., 255., 255.)))\n",
+    "\n",
+    "# Histogram of ROI\n",
+    "roi_hist = cv2.calcHist([hsv_roi], [0], mask, [180], [0, 180])\n",
+    "cv2.normalize(roi_hist, roi_hist, 0, 255, cv2.NORM_MINMAX)\n",
+    "\n",
+    "# Initial tracking window\n",
+    "track_window = (x, y, w, h)\n",
+    "\n",
+    "# Termination criteria\n",
+    "term_crit = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "    # Back projection\n",
+    "    dst = cv2.calcBackProject([hsv], [0], roi_hist, [0, 180], 1)\n",
+    "\n",
+    "    # Apply CamShift\n",
+    "    ret, track_window = cv2.CamShift(dst, track_window, term_crit)\n",
+    "\n",
+    "    # Draw tracking box\n",
+    "    pts = cv2.boxPoints(ret)\n",
+    "    pts = np.int32(pts)\n",
+    "    cv2.polylines(frame, [pts], True, (0, 255, 0), 2)\n",
+    "\n",
+    "    cv2.imshow(\"Object Tracking\", frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord(\"p\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "33f8adbf-d913-4251-ad4f-ea5a5b0417e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69989c49-6ca8-43a9-b7b8-b87a60e49425",
+   "metadata": {},
+   "source": [
+    "HOUGH TRANSFORMATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c9679e2f-0570-4fe2-b913-22f6e8393e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/Sudoku.jpg\")\n",
+    "img=cv2.resize(img,(400,400))\n",
+    "gry = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "edg = cv2.Canny(gry,20,250)\n",
+    "\n",
+    "lines = cv2.HoughLines(edg,1,np.pi/180,200)\n",
+    "for r,th in lines[0]:\n",
+    "    a = np.cos(th)\n",
+    "    b = np.sin(th)\n",
+    "    x0=a*r\n",
+    "    y0=b*r\n",
+    "    x1 = int(x0+1000*(-b))\n",
+    "    y1 = int(y0+1000*(a))\n",
+    "    x2 = int(x0-1000*(-b))\n",
+    "    y2 = int(y0-1000*(a))\n",
+    "    \n",
+    "    cv2.line(img,(x1,y1),(x2,y2),(0,255,0),2)\n",
+    "    \n",
+    "       \n",
+    "       \n",
+    "\n",
+    "cv2.imshow(\"original\",img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "65daf6f1-f8df-48b9-b055-92e0150be62d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/Sudoku.jpg\")\n",
+    "img=cv2.resize(img,(400,400))\n",
+    "gry = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "edg = cv2.Canny(gry,20,250)\n",
+    "l= cv2.HoughLines(edg,1,np.pi/180,200,minLineLength = 180,maxLineGap = 100)\n",
+    "for i in l:\n",
+    "    x1,y1,x2,y2 = i[0]\n",
+    "    cv2.line(img,(x1,y1),(x2,y2),(0,255,0),2)\n",
+    "\n",
+    "cv2.imshow(\"original\",img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ed537af-60e6-45c8-9863-129d09e0d306",
+   "metadata": {},
+   "source": [
+    "Template Matching "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "71e2d5bc-0ce6-49f3-9598-875de76cf68e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/crowd.jpg\")\n",
+    "gry = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "temp= cv2.imread(\"project_image/copy4.jpg\")\n",
+    "gry1 = cv2.cvtColor(temp,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "w,h= gry1.shape[::-1]\n",
+    "\n",
+    "res=cv2.matchTemplate(gry,gry1,cv2.TM_CCOEFF_NORMED)\n",
+    "\n",
+    "thr=0.6\n",
+    "l=np.where(res>=thr)\n",
+    "for i in zip(*l[::-1]):\n",
+    "    cv2.rectangle(img,i,(i[0]+w,i[1]+h),(0,255,0),1)\n",
+    "\n",
+    "\n",
+    "img=cv2.resize(img,(600,500))\n",
+    "\n",
+    "\n",
+    "\n",
+    "cv2.imshow(\"result\",res)\n",
+    "cv2.imshow(\"temp\",temp)\n",
+    "cv2.imshow(\"original\",img)\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "16537110-ff14-4c71-8b15-9dc83eb5467b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(174, 208)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w,h= gry1.shape[1],gry1.shape[0]\n",
+    "w,h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7142872f-40d4-4983-a62a-28066bf0674d",
+   "metadata": {},
+   "source": [
+    "HoughCircle Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "bb3c5949-4f21-41e7-91b4-b834535538a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/circle.jpg\")\n",
+    "img=cv2.resize(img,(600,500))\n",
+    "gry = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "gry = cv2.medianBlur(gry,7)\n",
+    "\n",
+    "c=cv2.HoughCircles(gry,cv2.HOUGH_GRADIENT,1,20,param1=80,param2=120,minRadius=0,maxRadius=0)\n",
+    "\n",
+    "data=np.uint16(np.around(c))\n",
+    "\n",
+    "for (x,y,r) in data[0,:]:\n",
+    "    cv2.circle(img,(x,y),r,(0,255,0),4)\n",
+    "\n",
+    "cv2.imshow(\"circle\",img) \n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46982704-007b-4dfa-a54e-caef9229d260",
+   "metadata": {},
+   "source": [
+    "Grabcut Algorithm for background change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a993328f-4cb4-40db-8d9e-72d3caa03529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"project_image/Leaf.png\")\n",
+    "\n",
+    "mask1 = np.zeros(img.shape[:2],np.uint8)\n",
+    "bgmask = np.zeros((1,65),np.float64)*255\n",
+    "fgmask = np.zeros((1,65),np.float64)*255\n",
+    "\n",
+    "#x1,y1,x2,y2\n",
+    "r = [152,39,540,340]\n",
+    "cv2.grabCut(img,mask1,r,bgmask,fgmask,3,cv2.GC_INIT_WITH_RECT)\n",
+    "\n",
+    "mask2=np.where((mask1==2) | (mask1==0),0,1).astype(\"uint8\")\n",
+    "\n",
+    "img=img*mask2[:,:,np.newaxis]\n",
+    "\n",
+    "cv2.imshow(\"wscube\",img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35fb55b4-f82a-4dec-ada4-efd937d06bcb",
+   "metadata": {},
+   "source": [
+    "video Background remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d41afc8e-815f-46ec-a4d1-d826c21dc756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap=cv2.VideoCapture(\"project_image/Leaf.png\")"
+   ]
   }
  ],
  "metadata": {
